--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "repository": "https://github.com/alexvictoor/pretty-commit.git",
   "author": "alexvictor <alexvictor@gmail.com>",
   "license": "Apache 2",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
-    "jest": "^23.4.0",
     "nodegit": "^0.22.1"
+  },
+  "devDependencies": {
+    "jest": "^23.5.0"
   }
 }
