--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pretty-commit",
+  "name": "pretty-commit-msg",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/alexvictoor/pretty-commit.git",
