feat: change module name for yarn create

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "pretty-commit-msg",
-  "version": "1.0.2",
+  "name": "create-pretty-commit",
+  "version": "1.0.0",
   "bin": {
-    "pretty-commit-msg": "./index.js"
+    "create-pretty-commit": "./index.js"
   },
   "main": "index.js",
   "repository": "https://github.com/alexvictoor/pretty-commit.git",
