--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-pretty-commit",
-  "version": "1.0.1",
+  "version": "1.1",
   "bin": {
     "create-pretty-commit": "./index.js"
   },
@@ -11,10 +11,8 @@
   "scripts": {
     "test": "jest"
   },
-  "dependencies": {
-    "nodegit": "^0.22.1"
-  },
   "devDependencies": {
-    "jest": "^23.5.0"
+    "jest": "^23.5.0",
+    "nodegit": "^0.22.1"
   }
 }
